# advent2022

./: Cargo.toml
benches/: my_benchmark.rs
solutions/: Cargo.toml
solutions/src/: aocday01.rs  aocday02.rs  aocday03.rs  aocday04.rs  aocday05.rs  aocday06.rs  aocday10.rs  aocday11.rs  solutions.rs
src/: aocday01.rs  aocday02.rs  aocday03.rs  aocday04.rs  main.rs  solutions.rs
src/solutions/: aocday01.rs  aocday02.rs  aocday03.rs  aocday04.rs
